# iced-app-template

./: .gitignore  Cargo.toml  LICENSE.md  README.md  app_config.toml  cargo-generate.toml  state.toml
.cargo/: config.toml
app/: Cargo.toml
app-cli/: Cargo.toml
app-cli/src/: args.rs  lib.rs
app-core/: Cargo.toml
app/src/: app.rs  logger.rs  macros.rs  main.rs  utils.rs
app/src/app/: features.rs  message.rs  session.rs  settings.rs  state.rs  theme.rs
app/src/app/features/: main.rs
app/src/app/features/main/: message.rs  state.rs
crates/{{project-name}}/: Cargo.toml  build.rs
crates/{{project-name}}-cli/: Cargo.toml
crates/{{project-name}}-cli/src/: args.rs  lib.rs
crates/{{project-name}}-config/: Cargo.toml
crates/{{project-name}}-core/: Cargo.toml
crates/{{project-name}}-core/src/: constants.rs  error.rs  lib.rs  logger.rs  types.rs
crates/{{project-name}}-persistence/: Cargo.toml
crates/{{project-name}}-persistence/src/: lib.rs
crates/{{project-name}}-theme/: Cargo.toml
crates/{{project-name}}-utils/: Cargo.toml
crates/{{project-name}}-utils/src/: command.rs
crates/{{project-name}}/src/: macros.rs  main.rs
crates/{{project-name}}/src/app/: macros.rs  message.rs  mod.rs  session.rs  state.rs  theme.rs  windows.rs
crates/{{project-name}}/src/app/features/: main.rs  mod.rs  root.rs
crates/{{project-name}}/src/app/widgets/: clickable_text.rs  macros.rs  mod.rs
crates/{{project-name}}/src/persistence/: session.rs
crates/{{project-name}}/src/platform/: commands.rs
docs/: ADDING_FEATURES.md  ARCHITECTURE.md  CONTRIBUTING.md  QUICKSTART.md  WIDGETS.md  feature_template.md  overview.md
resources/locales/en-US/: main.toml
resources/locales/ru-RU/: main.toml
