
[package]
name = "app"             # replace with placeholder
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
app-cli.path = "../app-cli" # replace with placeholder

tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true

iced.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
